--- a/web/index.scss
+++ b/web/index.scss
@@ -70,7 +70,7 @@
 }
 
 .gallery-container {
-    min-height: 500px;
+    min-height: 100%;
     .euiLoadingSpinner {
         margin-top: 240px;
         display: block;
